# chip8

./: CMakeLists.txt
include/: chip8.h
include/glad/: glad.h
src/: glad.c  main.cpp
